--- a/main/app/brm_core/templates/main.html
+++ b/main/app/brm_core/templates/main.html
@@ -127,7 +127,7 @@
                 <p> Fire BRM rule set is easy 2 steps process:</p>
                 <hr>
                 <h2>{{ main.step}}</h2>
-                <h4>To select file you can upload a new file by clicking on Upload button or select from repository on left. </h4>
+                To upload a new file click on Upload button or select from repository on left pane.
                 <form action="" method=post enctype=multipart/form-data>
                     <p>
                         <br> {{ main.bttns}}
