Fixed allignment in html

--- a/main/app/brm_core/templates/main.html
+++ b/main/app/brm_core/templates/main.html
@@ -68,40 +68,19 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">BRM Rules Inventory</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <!--        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+        -->
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <!--                              <li class="nav-item active">
-                               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                           </li>
-                -->
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <!--  <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                               Dropdown
-                           </a>
-                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                               <a class="dropdown-item" href="#">Action</a>
-                               <a class="dropdown-item" href="#">Another action</a>
-                               <div class="dropdown-divider"></div>
-                               <a class="dropdown-item" href="#">Something else here</a>
-                           </div>
-                       </li>
-                       <li class="nav-item">
-                           <a class="nav-link disabled" href="#">Disabled</a>
-                       </li>
-                          -->
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search files in inventory" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </div>
+
+
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search files in inventory" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+
+
     </nav>
 
     <div class="container-fluid text-center">
@@ -147,23 +126,27 @@
                 <hr>
                 {{ main.fireBRM}}
             </div>
-            <div class="col-sm-2 sidenav">
-                <div class="well">
-                    <p></p>
+            <!-- <div class="col-sm-2 sidenav">
+                    <div class="well">
+                        <p></p>
+                    </div>
+                    <div class="well">
+                        <p></p>
+                    </div>
                 </div>
-                <div class="well">
-                    <p></p>
-                </div>
-            </div>
+             -->
         </div>
     </div>
 
-    <div class="footer text-center">
-        <p>Open Source BSD-3-Clause Licence Copyright <a href="http://bloberry.net"> Bloberry Consulting</a></p>
-    </div>
-
-
-
+    <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+        <div class="container">
+            <p align="center">Open Source BSD-3-Clause Licence Copyright <a href="http://bloberry.net"> Bloberry Consulting</a></p>
+        </div>
+    </nav>
+    <!--  <div class="footer text-center">
+          <p>Open Source BSD-3-Clause Licence Copyright <a href="http://bloberry.net"> Bloberry Consulting</a></p>
+      </div>
+        -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
