Fixed scroller dowd position

--- a/main/app/brm_core/templates/main.html
+++ b/main/app/brm_core/templates/main.html
@@ -67,8 +67,11 @@
             -ms-flex-wrap: wrap; /* IE 10 */
             flex-wrap: wrap;
             padding: 0 4px;
-            max-height: 250px;
-            overflow-y: scroll;
+            max-height: 300px;
+#            overflow-y: scroll;
+            overflow: auto;
+            display: flex;
+            flex-direction: column-reverse;
         }
 
     </style>
