UI changes and  Session  introduction

--- a/main/app/brm_core/templates/main.html
+++ b/main/app/brm_core/templates/main.html
@@ -68,11 +68,19 @@
             flex-wrap: wrap;
             padding: 0 4px;
             max-height: 300px;
-#            overflow-y: scroll;
+            # overflow-y: scroll;
             overflow: auto;
             display: flex;
             flex-direction: column-reverse;
+            /*###############################*/
+            background: #2f3031;
+            z-index: 3;
+            font-family: Helvetica;
+            font-size: 10px;
+            color: lawngreen;
+            text-align: left;
         }
+
 
     </style>
 </head>
