--- a/main/app/brm_core/templates/main.html
+++ b/main/app/brm_core/templates/main.html
@@ -66,8 +66,8 @@
             display: flex;
             -ms-flex-wrap: wrap; /* IE 10 */
             flex-wrap: wrap;
-            padding: 0 4px 50px 0;
-            max-height: 500px;
+            padding: 0 4px;
+            max-height: 300px;
             # overflow-y: scroll;
             overflow: auto;
             display: flex;
