--- a/main/app/brm_core/templates/main.html
+++ b/main/app/brm_core/templates/main.html
@@ -114,7 +114,7 @@
                 by click on it
                 {{ main.hrefs_li }}
                 <h3> or upload </h3>
-                <form action="" method=post enctype=multipart/form-data>
+                <form action="/" method=post enctype=multipart/form-data>
                     <div class="input-group mb-3">
                         <div class="custom-file">
                             <input type=file name=file class="custom-file-input" id="inputGroupFile02" onchange="document.getElementById('upldbttn').style.visibility='visible'">
@@ -177,8 +177,7 @@
             var fileName = $(this).val();
             //replace the "Choose a file" label
             $(this).next('.custom-file-label').html(fileName);
-            $('upldbttn').style.visibility = 'visible'
-            style.visibility = 'visible'
+            document.getElementById('upldbttn').style.visibility = 'visible'    
         })
 
         var output = document.getElementById('output');
